@@ -6,7 +6,7 @@
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -21,14 +21,13 @@ package org.apache.skywalking.e2e.controller.genai;
 import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.JSONArray;
 import com.alibaba.fastjson.JSONObject;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.time.Instant;
+import javax.servlet.http.HttpServletResponse;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("/llm")
@@ -37,7 +36,9 @@ public class LLMMockController {
     @RequestMapping("/v1/chat/completions")
     public Object completions(@RequestBody JSONObject request, HttpServletResponse response) throws IOException {
         Boolean isStream = request.getBoolean("stream");
-        if (isStream == null) isStream = false;
+        if (isStream == null) {
+            isStream = false;
+        }
 
         JSONArray messages = request.getJSONArray("messages");
         JSONObject lastMessage = messages.getJSONObject(messages.size() - 1);
@@ -60,7 +61,11 @@ public class LLMMockController {
                     writeStreamChunk(writer, id, created, model, "{\"role\":\"assistant\"}", "null");
 
                     int len = fullContent.length();
-                    String[] parts = {fullContent.substring(0, len / 3), fullContent.substring(len / 3, len * 2 / 3), fullContent.substring(len * 2 / 3)};
+                    String[] parts = {
+                            fullContent.substring(0, len / 3),
+                            fullContent.substring(len / 3, len * 2 / 3),
+                            fullContent.substring(len * 2 / 3)
+                    };
 
                     for (String part : parts) {
                         Thread.sleep(50);
@@ -71,36 +76,32 @@ public class LLMMockController {
                 } else {
                     writeStreamChunk(writer, id, created, model, "{\"role\":\"assistant\"}", "null");
 
-                    String toolCallDelta = """
-                            {
-                                "tool_calls": [
-                                    {
-                                        "index": 0,
-                                        "id": "call_iV4bvFIZujbb",
-                                        "type": "function",
-                                        "function": {
-                                            "name": "get_weather",
-                                            "arguments": ""
-                                        }
-                                    }
-                                ]
-                            }
-                            """;
+                    String toolCallDelta = "{"
+                            + "  \"tool_calls\": ["
+                            + "    {"
+                            + "      \"index\": 0,"
+                            + "      \"id\": \"call_iV4bvFIZujbb\","
+                            + "      \"type\": \"function\","
+                            + "      \"function\": {"
+                            + "        \"name\": \"get_weather\","
+                            + "        \"arguments\": \"\""
+                            + "      }"
+                            + "    }"
+                            + "  ]"
+                            + "}";
                     writeStreamChunk(writer, id, created, model, toolCallDelta, "null");
 
                     String args = "{\\\"arg0\\\":\\\"new york\\\"}";
-                    String argsDelta = """
-                            {
-                                "tool_calls": [
-                                    {
-                                        "index": 0,
-                                        "function": {
-                                            "arguments": "%s"
-                                        }
-                                    }
-                                ]
-                            }
-                            """.formatted(args);
+                    String argsDelta = String.format("{"
+                            + "  \"tool_calls\": ["
+                            + "    {"
+                            + "      \"index\": 0,"
+                            + "      \"function\": {"
+                            + "        \"arguments\": \"%s\""
+                            + "      }"
+                            + "    }"
+                            + "  ]"
+                            + "}", args);
                     Thread.sleep(50);
                     writeStreamChunk(writer, id, created, model, argsDelta, "null");
 
@@ -116,68 +117,54 @@ public class LLMMockController {
             return null;
         }
 
-        String toolCallResponse = """
-                {
-                    "choices": [
-                        {
-                            "finish_reason": "tool_calls",
-                            "index": 0,
-                            "message": {
-                                "role": "assistant",
-                                "content": null,
-                                "tool_calls": [
-                                    {
-                                        "function": {
-                                            "arguments": "{\\"arg0\\":\\"new york\\"}",
-                                            "name": "get_weather"
-                                        },
-                                        "id": "call_iV4bvFIZujbb",
-                                        "type": "function"
-                                    }
-                                ]
-                            }
-                        }
-                    ],
-                    "created": 1768490813,
-                    "id": "chatcmpl-CyJXJt7gxwDgz",
-                    "usage": {
-                        "completion_tokens": 17,
-                        "completion_tokens_details": {
-                            "accepted_prediction_tokens": 0,
-                            "audio_tokens": 0,
-                            "reasoning_tokens": 0,
-                            "rejected_prediction_tokens": 0
-                        },
-                        "prompt_tokens": 52,
-                        "prompt_tokens_details": {
-                            "audio_tokens": 0,
-                            "cached_tokens": 0
-                        },
-                        "total_tokens": 69
-                    },
-                    "model": "gpt-4.1-2025-04-14",
-                    "object": "chat.completion"
-                }
-                """;
+        String toolCallResponse = "{"
+                + "  \"choices\": ["
+                + "    {"
+                + "      \"finish_reason\": \"tool_calls\","
+                + "      \"index\": 0,"
+                + "      \"message\": {"
+                + "        \"role\": \"assistant\","
+                + "        \"content\": null,"
+                + "        \"tool_calls\": ["
+                + "          {"
+                + "            \"function\": {"
+                + "              \"arguments\": \"{\\\"arg0\\\":\\\"new york\\\"}\","
+                + "              \"name\": \"get_weather\""
+                + "            },"
+                + "            \"id\": \"call_iV4bvFIZujbb\","
+                + "            \"type\": \"function\""
+                + "          }"
+                + "        ]"
+                + "      }"
+                + "    }"
+                + "  ],"
+                + "  \"created\": 1768490813,"
+                + "  \"id\": \"chatcmpl-CyJXJt7gxwDgz\","
+                + "  \"usage\": {"
+                + "    \"completion_tokens\": 17,"
+                + "    \"prompt_tokens\": 52,"
+                + "    \"total_tokens\": 69"
+                + "  },"
+                + "  \"model\": \"gpt-4.1-2025-04-14\","
+                + "  \"object\": \"chat.completion\""
+                + "}";
 
-        String finalResponse = """
-                {
-                   "choices": [
-                       {
-                           "finish_reason": "stop",
-                           "index": 0,
-                           "message": {
-                               "content": "The weather in New York is currently sunny with a temperature of 10°C.",
-                               "role": "assistant"
-                           }
-                       }
-                   ],
-                   "created": 1768491057,
-                   "id":"chatcmpl-CyJXJt7gxwDgz",
-                   "model": "gpt-4.1-2025-04-14",
-                   "object": "chat.completion"
-                }
-                """;
+        String finalResponse = "{"
+                + "  \"choices\": ["
+                + "    {"
+                + "      \"finish_reason\": \"stop\","
+                + "      \"index\": 0,"
+                + "      \"message\": {"
+                + "        \"content\": \"The weather in New York is currently sunny with a temperature of 10°C.\","
+                + "        \"role\": \"assistant\""
+                + "      }"
+                + "    }"
+                + "  ],"
+                + "  \"created\": 1768491057,"
+                + "  \"id\": \"chatcmpl-CyJXJt7gxwDgz\","
+                + "  \"model\": \"gpt-4.1-2025-04-14\","
+                + "  \"object\": \"chat.completion\""
+                + "}";
 
         if ("tool".equals(lastRole)) {
             return JSON.parseObject(finalResponse);
@@ -187,38 +174,26 @@ public class LLMMockController {
     }
 
     private void writeStreamChunk(PrintWriter writer, String id, long created, String model, String delta, String finishReason) {
-        String json = """
-                {
-                    "choices": [
-                        {
-                            "delta": %s,
-                            "finish_reason": %s,
-                            "index": 0,
-                            "logprobs": null
-                        }
-                    ],
-                    "object": "chat.completion.chunk",
-                    "usage": {
-                        "completion_tokens": 17,
-                        "completion_tokens_details": {
-                            "accepted_prediction_tokens": 0,
-                            "audio_tokens": 0,
-                            "reasoning_tokens": 0,
-                            "rejected_prediction_tokens": 0
-                        },
-                        "prompt_tokens": 52,
-                        "prompt_tokens_details": {
-                            "audio_tokens": 0,
-                            "cached_tokens": 0
-                        },
-                        "total_tokens": 69
-                    },
-                    "created": %d,
-                    "system_fingerprint": null,
-                    "model": "%s",
-                    "id": "%s"
-                }
-                """.formatted(delta, finishReason, created, model, id);
+        String json = String.format("{"
+                + "  \"choices\": ["
+                + "    {"
+                + "      \"delta\": %s,"
+                + "      \"finish_reason\": %s,"
+                + "      \"index\": 0,"
+                + "      \"logprobs\": null"
+                + "    }"
+                + "  ],"
+                + "  \"object\": \"chat.completion.chunk\","
+                + "  \"usage\": {"
+                + "    \"completion_tokens\": 17,"
+                + "    \"prompt_tokens\": 52,"
+                + "    \"total_tokens\": 69"
+                + "  },"
+                + "  \"created\": %d,"
+                + "  \"system_fingerprint\": null,"
+                + "  \"model\": \"%s\","
+                + "  \"id\": \"%s\""
+                + "}", delta, finishReason, created, model, id);
 
         String cleanJson = json.replace("\n", "").replace("\r", "");
         writer.write("data: " + cleanJson + "\n\n");
@@ -226,7 +201,9 @@ public class LLMMockController {
     }
 
     private String escapeJson(String input) {
-        if (input == null) return "";
+        if (input == null) {
+            return "";
+        }
         return input.replace("\"", "\\\"").replace("\n", "\\n").replace("\r", "\\r");
     }
 }
